--- a/Shop.css
+++ b/Shop.css
@@ -1,4 +1,5 @@
 /* Shop.css */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #141414;
@@ -88,16 +89,16 @@ button {
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin: 10px;
-    width: 180px;
+    width: 261px; /* Фиксированная ширина карточки */
     text-align: center;
+    margin: 10px;
     position: relative;
-    backdrop-filter: blur(10px); /* Добавление размытия */
 }
 
 .product-card img {
     width: 100%;
-    height: auto;
+    height: 212px; /* Фиксированная высота */
+    object-fit: cover; /* Обеспечивает сохранение пропорций */
 }
 
 .product-info {
@@ -105,17 +106,16 @@ button {
 }
 
 .product-price {
-    display: none;
     position: absolute;
     bottom: -50px; /* Скрываем под ячейкой */
     left: 0;
     right: 0;
     text-align: center;
+    display: none; /* По умолчанию скрываем */
 }
 
 .product-card:hover .product-price {
     display: block;
-    animation: slideUp 0.3s ease forwards; /* Анимация для плавного появления */
 }
 
 .product-card:hover {
@@ -123,25 +123,13 @@ button {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-@keyframes slideUp {
-    0% {
-        bottom: -50px;
-        opacity: 0;
-    }
-    100% {
-        bottom: 10px;
-        opacity: 1;
-    }
-}
-
 .product-price button {
-    background-color: #00ff00;
+    background-color: #00ff00; /* Ярко-зеленый цвет */
     color: #000000;
     border: none;
-    padding: 10px;
+    padding: 15px 25px; /* Увеличенные размеры кнопки */
     cursor: pointer;
-    width: 80%;
-    margin: 10px 10%;
+    width: 100%; /* Кнопка занимает всю ширину контейнера */
     border-radius: 5px;
     font-weight: bold;
 }
